# rp2350_hacking_challenge_2

./: CMakeLists.txt  README.md  aes.S  aes_report_monospace.md  config.h  keytool.py  rp2350_hacking_challenge_2.c
emulation/: README.md  aes_emulator.py  aes_reference.py  build_asm.py  hw_emulation.py  requirements.txt  rp2350_hw.py  test_aes.py
emulation/include/hardware/: platform_defs.h  rcp.h
